package com.english.learning.enums;

public enum Role {
    USER,
    ADMIN
}
